--- a/glide.yaml
+++ b/glide.yaml
@@ -4,3 +4,7 @@ import:
   version: ~1.3.0
 - package: github.com/joho/godotenv
   version: ~1.3.0
+- package: go.mongodb.org/mongo-driver
+  version: ~1.0.0
+  subpackages:
+  - mongo
