--- a/glide.yaml
+++ b/glide.yaml
@@ -1,11 +1,14 @@
-package: gitlab.com/letsgo
+package: gitlab.com/go-auth
 import:
-- package: github.com/gin-gonic/gin
-  version: ~1.3.0
-- package: github.com/joho/godotenv
-  version: ~1.3.0
-- package: go.mongodb.org/mongo-driver
-  version: ~1.0.0
-  subpackages:
-  - mongo
-- package: gopkg.in/check.v1
+  - package: github.com/gin-gonic/gin
+    version: ~1.3.0
+  - package: github.com/joho/godotenv
+    version: ~1.3.0
+  - package: go.mongodb.org/mongo-driver
+    version: ~1.0.0
+    subpackages:
+      - mongo
+  - package: gopkg.in/check.v1
+  - package: gopkg.in/oauth2.v3
+    version: ~3.9.5
+  - package: github.com/go-oauth2/gin-server
