--- a/glide.yaml
+++ b/glide.yaml
@@ -16,3 +16,7 @@ import:
   version: ~1.4.0
 - package: github.com/gin-contrib/cors
   version: ~1.2.0
+- package: github.com/graphql-go/graphql
+  version: ~0.7.8
+- package: github.com/graphql-go/handler
+  version: ~0.2.3
