--- a/glide.yaml
+++ b/glide.yaml
@@ -20,3 +20,4 @@ import:
   version: ~0.7.8
 - package: github.com/graphql-go/handler
   version: ~0.2.3
+- package: github.com/letsgo-framework/letsgo-mongo-connector
