log support added

--- a/glide.yaml
+++ b/glide.yaml
@@ -20,3 +20,5 @@ import:
   version: ~0.7.8
 - package: github.com/graphql-go/handler
   version: ~0.2.3
+- package: gopkg.in/natefinch/lumberjack.v2
+  version: ~2.1.0
