--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ git:
 before_script:
   - cp .env.example .env
   - cp .env.example .env.testing
-
+  - go get golang.org/x/tools/cmd/cover
+  - go get github.com/mattn/goveralls
 script:
-  - go test ./tests/main_test.go
+  - go test ./tests/main_test.go -v -covermode=count -coverprofile=coverage.out $HOME/gopath/bin/goveralls -coverprofile=coverage.out -service=travis-ci -repotoken $COVERALLS_TOKEN
