--- a/.travis.yml
+++ b/.travis.yml
@@ -16,5 +16,4 @@ before_script:
   - go get github.com/mattn/goveralls
 script:
   - go test ./tests/main_test.go -v -covermode=count -coverprofile=coverage.out
-  - $HOME/gopath/bin/goveralls -coverprofile=coverage.out -service=travis-ci -repotoken
-  - $COVERALLS_TOKEN
+  - $HOME/gopath/bin/goveralls -coverprofile=coverage.out -service=travis-ci -repotoken $COVERALLS_TOKEN
