--- a/glide.yaml
+++ b/glide.yaml
@@ -1,4 +1,4 @@
-package: github.com/letsgo
+package: github.com/letsgo-framework/letsgo
 import:
 - package: github.com/gin-gonic/gin
   version: ~1.3.0
