--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,9 @@ DATABASE_PORT=27017
 DATABASE=letsgo_testdb
 
 LOG_LEVEL=debug
+
+
+MAIL_HOST=smtp.mailtrap.io
+MAIL_PORT=2525
+MAIL_USERNAME=null
+MAIL_PASSWORD=null
