--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,7 @@ MAIL_HOST=smtp.mailtrap.io
 MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
+
+SERVE_TLS=false
+CERTIFICATE_LOCATION=
+KEY_FILE_LOCATION=
